@@ -10,6 +10,7 @@ VERSION 1.1.6 (??? ?? ??:?? 2004)
   value
 - "0" can now be used as a valid interval name
 - Config error messages now wrap before 80 columns.
+- Moved $file_line_num global var into parse_config_file()
 
 VERSION 1.1.5 (Jun 20 20:56 2004)
 ------------------------------------------------------------------------------
